<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/userInfoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userinfotext"
            android:textSize="28sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailText"
            android:textSize="20sp"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePwd"
            android:backgroundTint="@color/button"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/edtOldPassword"
            android:hint="@string/oldPwd"
            android:inputType="textPassword"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtNewPassword"
            android:hint="@string/newPwd"
            android:inputType="textPassword"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSavePassword"
            android:text="@string/save"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fiók törlése"
            android:backgroundTint="@color/red"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>
